--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,23 @@ jobs:
       run: |
         node -v
         npm -v
+  parallel-job-macos:
+    runs-on: macos-latest
+    steps:
+    - name: Run a one-line script
+      run: echo Hello, world!
+    - name: Run a multi-line script
+      run: |
+        node -v
+        npm -v
+    - name : View SW Version
+      run: |
+        sw_vers
+  dependent-job:
+    runs-on: windows-latest
+    needs: [run-shell-commands, parallel-job-macos]
+    steps:
+    - name: Run a one-line script
+      run: echo Hello, windows!
+    - name: Error step
+      run: does-not-exist
