--- a/.github/workflows/workflow-commands.yml
+++ b/.github/workflows/workflow-commands.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Masking a value
         run: echo "::add-mask::Secret String"
       - name: Echo a secret
-        run: echo "Secret String"
+        run: | 
+          echo "Secret String"
+          echo "::endmask::"
+
       - name: Echo a secret
         run: echo "Secret String"
