Once a value is masked using ::add-mask::, it remains masked throughout the workflow. Unfortunately, there is no command to unmask a value within the same workflow. The masked value will continue to be masked in all subsequent steps.  To work around this, you can avoid using the ::add-mask:: command for the specific value you want to unmask later. Instead, you can use different values or avoid masking altogether if you need to display the value later in the workflow.

--- a/.github/workflows/workflow-commands.yml
+++ b/.github/workflows/workflow-commands.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Echo masked secret
         run: echo "Secret String"
       - name: Echo unmasked secret
-        run: echo "Secret String"
+        run: echo "Different String
