--- a/.github/workflows/workflow-run.yml
+++ b/.github/workflows/workflow-run.yml
@@ -4,7 +4,7 @@ on:
     workflows: [Repository Events]
     types: [completed]
     branches:
-      - main
+      - master
 jobs:
   echo-string:
     runs-on: ubuntu-latest
