--- a/.github/workflows/expressions-and-contexts.yml
+++ b/.github/workflows/expressions-and-contexts.yml
@@ -2,6 +2,16 @@ name: Expressions & Contexts
 on: [push, pull_request, issues, workflow_dispatch]
 run-name: "Expressions & Contexts by @${{ github.actor }}, event: ${{ github.event_name }}"
 jobs:
+  runs-on-isssues-and-prs:
+    runs-on: ubuntu-latest
+    if: contains(fromJson('["pull_request", "issues"]'), github.event_name)
+    steps:
+      - name: Run only if issue has bug label
+        if: contains(github.event.issue.labels.*.name, 'bug')
+        run: |
+          echo "This issue has a bug label"
+          echo ${{ join(github.event.issue.labels.*.name, ', ') }}
+
   using-expressions-and-contexts:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
